feat: Allow voting on a poll (#127)
* feat: Describe a Vote
* doc: Document the domain model
* test: Restructure unit test for Voting Service
* refactor: Turn Ballot into a class
* feat: Prepare domain for using a ballot to vote
* feat: Implement voting on a poll
* feat: Prevent voting twice in the same HTTP session
* test: Add automated browser tests
* style: Cleanup MapStruct configuration
* style: Remove unused constructor
* style: Avoid 'getter' so MapStruct doesn't get confused
* style: Simplify code
* style: Formatting
* test: Validate retaining database primary keys in domain objects
* test: Validate behaviour of Vote controller when it comes to voting